--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 bcrypt==5.0.0
 black==25.11.0
 blinker==1.9.0
+certifi==2025.11.12
 click==8.3.1
+cloudinary==1.44.1
 Flask==3.1.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -13,4 +15,6 @@ platformdirs==4.5.0
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
 pytokens==0.3.0
+six==1.17.0
+urllib3==2.5.0
 Werkzeug==3.1.3
